@@ -292,9 +292,7 @@ public class FeatureSetDao {
         });
 
     // Preserve the order returned by the original query.
-    return featureSets.stream()
-        .map(c -> featureSetsMap.get(c.getId()).build())
-        .collect(Collectors.toList());
+    return featureSets.stream().map(c -> featureSetsMap.get(c.getId()).build()).toList();
   }
 
   private void updateCriteriaHelper(String featureSetId, List<Criteria> criteria) {
@@ -317,7 +315,7 @@ public class FeatureSetDao {
         "INSERT INTO criteria (concept_set_id, id, display_name, plugin_name, plugin_version, predefined_id, selector_or_modifier_name, selection_data, ui_config, list_index) "
             + "VALUES (:concept_set_id, :id, :display_name, :plugin_name, :plugin_version, :predefined_id, :selector_or_modifier_name, :selection_data, :ui_config, :list_index)";
     LOGGER.debug("CREATE criteria: {}", sql);
-    List<MapSqlParameterSource> criteriaParamSets =
+    MapSqlParameterSource[] criteriaParamSets =
         criteria.stream()
             .map(
                 c ->
@@ -332,12 +330,9 @@ public class FeatureSetDao {
                         .addValue("selection_data", c.getSelectionData())
                         .addValue("ui_config", c.getUiConfig())
                         .addValue("list_index", 0))
-            .collect(Collectors.toList());
-    rowsAffected =
-        Arrays.stream(
-                jdbcTemplate.batchUpdate(
-                    sql, criteriaParamSets.toArray(new MapSqlParameterSource[0])))
-            .sum();
+            .toList()
+            .toArray(new MapSqlParameterSource[0]);
+    rowsAffected = Arrays.stream(jdbcTemplate.batchUpdate(sql, criteriaParamSets)).sum();
     LOGGER.debug("CREATE criteria rowsAffected = {}", rowsAffected);
 
     // Write the criteria tags.
@@ -356,7 +351,7 @@ public class FeatureSetDao {
                                 .addValue("criteria_id", c.getId())
                                 .addValue("key", tag.getKey())
                                 .addValue("value", tag.getValue()))
-                    .collect(Collectors.toList())));
+                    .toList()));
     rowsAffected =
         Arrays.stream(
                 jdbcTemplate.batchUpdate(sql, tagParamSets.toArray(new MapSqlParameterSource[0])))
